pref: avoid layout shift (#22)

--- a/assets/style.css
+++ b/assets/style.css
@@ -36,6 +36,7 @@ header{
 	text-align: center;
 }
 main{
+	min-height: 100vh;
 	flex-grow: 1;
 	padding: 0 1rem;
 	background-color: #eee;
